--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ server.error.include-exception=true
 server.error.include-message=always
 #server.error.include-stacktrace=always
 #server.error.include-binding-errors=always
+server.port=8085
